--- a/HomeChallenge/r2/r2_test.ipynb
+++ b/HomeChallenge/r2/r2_test.ipynb
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -1500,7 +1500,7 @@
        "[3470 rows x 7 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1508,9 @@
    "source": [
     "#Some of the portfolios have similar patterns\n",
     "#Let's try combine them into groups and use the group average\n",
-    "#But first let's try the plain vanila "
+    "#But first let's try average all the hotels \n",
+    "\n",
+    "to_port_level()"
    ]
   },
   {
