--- a/HomeChallenge/r2/Geo_plotting.ipynb
+++ b/HomeChallenge/r2/Geo_plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -722,6 +722,136 @@
    "source": [
     "#### What about instead of using the state average return we use the  closest one instead."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>hotel_id</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>ZipCode</th>\n",
+       "      <th>Rooms</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>216364</td>\n",
+       "      <td>South Lake Tahoe</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>96150</td>\n",
+       "      <td>400</td>\n",
+       "      <td>38.958454</td>\n",
+       "      <td>-119.942032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>768509</td>\n",
+       "      <td>Washington DC</td>\n",
+       "      <td>DC</td>\n",
+       "      <td>20005</td>\n",
+       "      <td>175</td>\n",
+       "      <td>38.906662</td>\n",
+       "      <td>-77.033630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>358047</td>\n",
+       "      <td>Augusta</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>30907</td>\n",
+       "      <td>65</td>\n",
+       "      <td>33.515293</td>\n",
+       "      <td>-82.044167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>418753</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>12205</td>\n",
+       "      <td>133</td>\n",
+       "      <td>42.725750</td>\n",
+       "      <td>-73.798851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>452812</td>\n",
+       "      <td>Amarillo</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>79124</td>\n",
+       "      <td>92</td>\n",
+       "      <td>35.187943</td>\n",
+       "      <td>-101.940521</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  hotel_id              City State ZipCode  Rooms   Latitude   Longitude\n",
+       "0   1    216364  South Lake Tahoe    CA   96150    400  38.958454 -119.942032\n",
+       "1   2    768509     Washington DC    DC   20005    175  38.906662  -77.033630\n",
+       "2   3    358047           Augusta    GA   30907     65  33.515293  -82.044167\n",
+       "3   4    418753            Albany    NY   12205    133  42.725750  -73.798851\n",
+       "4   5    452812          Amarillo    TX   79124     92  35.187943 -101.940521"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
